@@ -1,8 +1,6 @@
 1. __PREREQUIS__
-    - Quelle version de java utiliser pour compiler/exécuter : Java 1.8, à savoir celle incluant de base JavaFX.
-
-        "java -version" -> "java 1.8.XXX".
-
+    - java 8, rien;
+    - java 11, clean install de javafx
 
 2. __JAR__
     - Ligne de commande pour exécuter le projet à partir du jar exécutable :
@@ -17,13 +15,10 @@
 3. __ECLIPSE__
     - Ligne de commande pour exécuter le projet sur eclipse /!\ SI VOUS UTILISEZ UNE VERSION DE JAVA > 1.8/!\.
 
-        __WINDOWS__
-            Run Configuration : ajouter cette ligne :  
-                --module-path "lib/javafx-sdk-Windows/lib" --add-modules javafx.controls,javafx.fxml
-
-        __LINUX__
-            Run Configuration : ajouter cette ligne :  
-                --module-path "lib/javafx-sdk-Linux/lib" --add-modules javafx.controls,javafx.fxml
-
-
-    - La classe principale à Run est la classe "source-du-projec/src/application/MainIHM.java"
+       il existe 2 profils maven: normal et 1.8
+       
+       normal compile et execute sous java 11
+       et 1.8 execute sous java 8
+       
+       
+       ne pas oublié le javafx:run...
